Fixed a bit of css to show previously invisible text in dark mode

--- a/Soundwaves/Soundwaves/src/main/resources/static/css/styles.css
+++ b/Soundwaves/Soundwaves/src/main/resources/static/css/styles.css
@@ -1812,6 +1812,7 @@ text-decoration: none;
     padding: 30px;
     border-radius: 2rem;
     box-sizing: border-box;
+    
 }
 
 .admin-addproduct-container h1{
@@ -1834,14 +1835,14 @@ text-decoration: none;
 
 .admin-addproduct-container form .admin-addproduct-input label{
     width: 200px;
-    color: var(--p5-colour);
+    color: var(--p4-colour);
     font-size: 14px;
 }
 
 .admin-addproduct-container .admin-addproduct-form .admin-addproduct-input-box .admin-addproduct-input, .admin-addproduct-container .admin-addproduct-form .admin-addproduct-input-box .admin-addproduct-textarea{
     width: 100%;
     outline: none;
-    color: var(--s-colour-);
+    color: var(--p4-colour);
     border: 1px solid #d5dbd9;
     padding-top: 10px;
     font-size: 15px;
@@ -1854,12 +1855,14 @@ text-decoration: none;
     height: 125px;
     margin-bottom: 15px;
     resize: none;
+    color: var(--p4-colour);
 }
 
  .admin-addproduct-container .admin-addproduct-form .admin-addproduct-input-box .admin-addproduct-custom-select{
     position: relative; 
     width: 100%;
     height: 37px;
+    color: var(--p4-colour);
 }
 
 .admin-addproduct-container .admin-addproduct-form .admin-addproduct-input-box .admin-addproduct-custom-select:before{
